# rtinfer

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  build-timing.yml  ci.yml  release.yml
.plans/: adaptive-dual-transport-responses.md
.plans/evidence/: adaptive-dual-transport-goodput-2026-07-20.json
clients/: contract.json
clients/js/: rtinfer-client.mjs  rtinfer-client.test.mjs
clients/python/: rtinfer_client.py  test_rtinfer_client.py
crates/rtinfer-core/: Cargo.toml
crates/rtinfer-core/examples/: responses_goodput.rs  socket_reuse_probe.rs
crates/rtinfer-core/src/: adaptive.rs  auth.rs  lib.rs  pool.rs  protocol.rs  responses.rs  thread.rs  warm.rs
crates/rtinfer-core/tests/: adaptive_concurrency.rs  auth.rs  live_smoke.rs  no_direct_construction.rs  pool.rs  protocol.rs  responses_dual_live.rs  responses_dual_transport.rs  responses_http_sse.rs  responses_protocol.rs  responses_wire.rs
crates/rtinfer-core/tests/fixtures/: codex_responses_worktime.jsonl
crates/rtinfer-daemon/: Cargo.toml
crates/rtinfer-daemon/src/: cse_toold_auth.rs  endpoint_file.rs  install.rs  lock.rs  main.rs  self_update.rs  server.rs
scripts/: build-npm-packages.sh  dev-link.sh  resolve-boringssl-prebuild.sh  set-version.sh  sync-clients.sh
tests/: release-contract.test.mjs
wiki/: 2026-07-14-realtime-navigator-reliability.md
