[workspace]
resolver = "2"
members = [
    "crates/rtinfer-core",
    "crates/rtinfer-daemon",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Jared Boynton"]
license = "MIT"
repository = "https://github.com/jaredboynton/rtinfer"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warpsock = "4.2.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 0
codegen-units = 256
strip = "symbols"
