[package]
name = "rtinfer-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Always-on loopback rtinfer/1 inference daemon (gpt-realtime + codex/responses)."

[[bin]]
name = "rtinferd"
path = "src/main.rs"

[dependencies]
rtinfer-core = { path = "../rtinfer-core" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
